--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="Student Vibe Check - AI-Powered Feedback Analysis" />
+    <title>Vibe Check | AI Sentiment Analysis</title>
   </head>
   <body>
     <div id="root"></div>
